# chipiron-website

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  MakefileForTest.mk  Notes.md  README.md  app.py  app.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: ci.yaml
flaskapp/: board_test.py  flask_app.py  test_flask_app.py
flaskapp/static/: main.css  scripts.js  style.css
flaskapp/templates/: about.html  index.html  layout.html
